--- a/LetUsBringYourHomeStyle/appsettings.json
+++ b/LetUsBringYourHomeStyle/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureConnection": "Server=tcp:letusbringyourhomestyle.database.windows.net,1433;Initial Catalog=Baza;Persist Security Info=False;User ID=admin1;Password=HomeStyle1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
