--- a/LetUsBringYourHomeStyle/appsettings.json
+++ b/LetUsBringYourHomeStyle/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureConnection": "Server=tcp:letusbringyourhomestyle.database.windows.net,1433;Initial Catalog=Baza;Persist Security Info=False;User ID=admin1;Password=HomeStyle1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureConnection": "Server=tcp:letusbringyourhomestyle.database.windows.net,1433;Initial Catalog=HomeStyleBaza;Persist Security Info=False;User ID=admin1;Password=HomeStyle1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
